--- a/app/src/main/res/layout/activity_consulta.xml
+++ b/app/src/main/res/layout/activity_consulta.xml
@@ -26,7 +26,7 @@
             android:gravity="center"
             android:text="Animais Cadastrados"
             android:textColor="@android:color/background_light"
-            android:textSize="18sp" />
+            android:textSize="20dp" />
 
     </LinearLayout>
 
